# pls-mgr

./: README.md  pls-mgr.cabal
src/: Main.hs  Parser.hs
