name:                pls-mgr
version:             0.1.0.0
synopsis:            Program to manage playlists
description:         Please see README.md
homepage:            https://github.com/githubuser/pls-mgr#readme
license:             BSD3
license-file:        LICENSE
author:              Brad Neimann
maintainer:          brad.neimann@hotmail.com
copyright:           2016 Brad Neimann
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable pls-mgr
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , filepath
                     , parsec
                     , safe
                     , split
  other-modules:       Parser
